# axumrouter-backend

./: .env.example  .gitignore  AGENTS.md  AGENTS.md.example  Cargo.toml  README.md  providers.toml
config/: config.example.toml  config.toml.bak
docs/: API_KEY_PROVIDER_GUIDE.md  GUIDE.md  NEXT_MVP_FEATURES.md
docs/provider_templates/apikey/: auth.rs.txt  client.rs.txt  constants.rs.txt  mapper.rs.txt  mod.rs.txt  provider.rs.txt  request.rs.txt  response.rs.txt
public/: index.html
public/assets/: index-C0WUyAp4.js  index-DgyS-HSQ.js  index-DwysTCi5.css
src/: app.rs  error.rs  main.rs  state.rs
src/admin/: api.rs  auth_files.rs  login.rs  mod.rs  oauth.rs
src/admin/oauth/: cx.rs  fb.rs  gb.rs  kl.rs  mod.rs  np.rs  xai.rs
src/admin/routes/: combos.rs  database.rs  gateway_keys.rs  keys.rs  logs.rs  mod.rs  models.rs  providers.rs  quota.rs  settings.rs  usage.rs
src/api/: mod.rs  models.rs  responses.rs
src/api/chat/: combo.rs  mod.rs  non_streaming.rs  streaming.rs
src/config/: loader.rs  models.rs
src/db/: migrations.rs  mod.rs  models.rs
src/engine/: helpers.rs  mod.rs
src/engine/anthropic_compat/: auth.rs  client.rs  config.rs  mapper.rs  provider.rs  types.rs
src/middleware/: auth.rs  logging.rs
src/providers/: error_classifier.rs  key_manager.rs  manager.rs  mod.rs  registry.rs  result.rs  spec.rs  toml_provider.rs  traits.rs
src/services/: caveman.rs  gateway.rs  mod.rs  ponytail.rs  rtk.rs  rtk_filters.rs  tool_normalizer.rs  usage_tracking.rs
src/types/: chat.rs  mod.rs  model.rs  provider.rs
src/utils/: mod.rs
(+149 files in other folders)
