[package]
name = "axumrouter"
version = "0.1.0"
edition = "2021"
description = "Lightweight AI Gateway — provider-agnostic LLM router built with Rust + Axum"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
